	- Fixed: Traffic data must not be lost in case where the imscp-vrl-traff script dies for any reason
	- Fixed: Upstart/SysV init - Interoperability
	- Fixed: Usage of dynamic resolv.conf (See resolvconf(8))
	- Fixed: Wrong DNS record type for subdomain with IPv6 (A instead of AAAA)
	- Removed: Useless bind9 templates
	- Removed: Useless backup and users log directories (Httpd server impl.)
	- Replaced: iMSCP::IP library by IMSCP::Net library (full rewrite using iproute tools instead of net-tools)
	- Replaced: imscp-apache-logger by vlogger (i-MSCP specific version)
	- Rewritten: getTraffic() methods from server implementations
	- Rewritten: iMSCP::Database class
	- Rewritten: imscp-srv-traff and imscp-vrl-traff scripts

GUI:
	- Added: proc_open and popen in PHP editor
	- Added: quoteValue() function, which allow to quote string for use in SQL statements
	- Removed: IP domain name and IP alias name
	- Removed: Useless ip_ssl_domain_id field form server_ips database table

PLUGINS:
	- Added: Support for local plugin configuration files (See data/persistent/plugins/README.md)
	- Updated: Plugin API to version 0.2.3

SETUP:
	- Fixed: Auto installer must check for any i-MSCP running process
	- Fixed: Composer process timeout must be increased for slow connections
	- Fixed: Unable to add external repository (Lucid...)

VENDOR
    - Updated: Net_DNS2 to version 1.3.2

Tickets:
	- Fixed #0528: Bug - The resolv.conf file shouldn't be edited manually
	- Fixed #0969: Defect - IPv6 addresses are not removed properly through interface
	- Fixed #0972: Bug - Adding second External Mailserver gives an error (Edit mode)
	- Fixed #0974: Bug - Customers assignment doesn't work if the first reseller hasn't any client
	- Fixed #0975: Bug - Customers assignment - disk limitation check doesn't work correctly
	- Fixed #0976: Bug - Wrong syntax for the mail quota value
	- Fixed #0978: Defect - SPF records for subdomains and external mail server