@@ -31,7 +31,7 @@ use FindBin;
 use lib "$FindBin::Bin", "$FindBin::Bin/PerlLib", "$FindBin::Bin/PerlVendor";
 
 use iMSCP::Debug;
-use iMSCP::Boot;
+use iMSCP::Bootstrapper;
 use iMSCP::HooksManager;
 use iMSCP::Execute;
 use MIME::Base64;
@@ -54,7 +54,7 @@ silent(1);
 
 sub startUp
 {
-	iMSCP::Boot->getInstance()->boot();
+	iMSCP::Bootstrapper->getInstance()->boot({ 'norequirements' => 'yes' });
 
 	0;
 }
