@@ -30,7 +30,7 @@ use FindBin;
 use lib "$FindBin::Bin/..", "$FindBin::Bin/../PerlLib", "$FindBin::Bin/../PerlVendor";
 
 use iMSCP::Debug;
-use iMSCP::Boot;
+use iMSCP::Bootstrapper;
 use iMSCP::Servers;
 use iMSCP::Addons;
 
@@ -48,7 +48,7 @@ silent(1);
 
 sub startUp
 {
-	iMSCP::Boot->getInstance()->boot(
+	iMSCP::Bootstrapper->getInstance()->boot(
 		{
 			'nolock' => 'yes', 'norequirements' => 'yes', 'nokeys' => 'yes', 'nodatabase' => 'yes',
 			'config_readonly' => 'yes'
