@@ -33,7 +33,7 @@ use FindBin;
 use lib "$FindBin::Bin/..", "$FindBin::Bin/../PerlLib", "$FindBin::Bin/../PerlVendor";
 
 use iMSCP::Debug;
-use iMSCP::Boot;
+use iMSCP::Bootstrapper;
 use iMSCP::Execute;
 use Crypt::PasswdMD5;
 
@@ -51,7 +51,9 @@ silent(1);
 
 sub startUp
 {
-	iMSCP::Boot->getInstance()->boot({ 'nolock' => 'yes', 'norequirements' => 'yes', 'config_readonly' => 'yes' });
+	iMSCP::Bootstrapper->getInstance()->boot(
+		{ 'nolock' => 'yes', 'norequirements' => 'yes', 'config_readonly' => 'yes' }
+	);
 }
 
 sub process
